--- a/results/2015-august/results.tex
+++ b/results/2015-august/results.tex
@@ -10,14 +10,14 @@ Bug id            & NopolPC   & NopolC    & BrutpolPC & BrutpolC  & Genprog   & 
 C1                & --        & --        & --        & --        & Fixed     & Fixed     &Fixed   \\
 C3                & --        & Fixed     & --        & --        & Fixed     & --        &Fixed   \\
 C5                & --        & Fixed     & --        & Fixed     & Fixed     & Fixed     &Fixed   \\
-C6                & --        & --        & Fixed     & --        & Fixed     & --        &Fixed   \\
+C6                & --        & --        & Fixed     & --        & --        & --        &Fixed   \\
 C7                & --        & --        & --        & --        & Fixed     & --        &Fixed   \\
 C8                & --        & --        & --        & --        & Fixed     & --        &Fixed   \\
-C9                & Fixed     & Fixed     & Fixed     & Fixed     & Fixed     & --        &Fixed   \\
+C9                & Fixed     & Fixed     & Fixed     & Fixed     & --        & --        &Fixed   \\
 C13               & Fixed     & Fixed     & Fixed     & --        & Fixed     & Fixed     &Fixed   \\
 C15               & --        & --        & --        & --        & Fixed     & Fixed     &Fixed   \\
 C17               & Fixed     & Fixed     & Fixed     & Fixed     & --        & --        &Fixed   \\
-C21               & Fixed     & --        & Fixed     & --        & Fixed     & Fixed     &Fixed   \\
+C21               & Fixed     & --        & Fixed     & --        & --        & Fixed     &Fixed   \\
 C25               & Fixed     & Fixed     & Fixed     & Fixed     & Fixed     & Fixed     &Fixed   \\
 C26               & Fixed     & Fixed     & --        & Fixed     & --        & Fixed     &Fixed   \\
 \hline
@@ -31,7 +31,10 @@ L58               & Fixed     & Fixed     & --        & --        & --        & 
 \hline
 M2                & --        & --        & --        & --        & Fixed     & Fixed     &Fixed   \\
 M5                & --        & --        & --        & --        & Fixed     & --        &Fixed   \\
+M7                & --        & --        & --        & --        & Fixed     & --        &Fixed   \\
 M8                & --        & --        & --        & --        & Fixed     & Fixed     &Fixed   \\
+M15               & --        & --        & --        & --        & Fixed     & --        &Fixed   \\
+M18               & --        & --        & --        & --        & Fixed     & --        &Fixed   \\
 M28               & --        & --        & --        & --        & Fixed     & Fixed     &Fixed   \\
 M32               & Fixed     & --        & --        & Fixed     & --        & Fixed     &Fixed   \\
 M33               & Fixed     & Fixed     & Fixed     & --        & --        & --        &Fixed   \\
@@ -69,7 +72,7 @@ T4                & --        & --        & --        & --        & Fixed     & 
 T7                & --        & --        & Fixed     & --        & --        & --        &Fixed   \\
 T11               & Fixed     & Fixed     & Fixed     & Fixed     & Fixed     & Fixed     &Fixed   \\
 \hline
-Total             & 31 (13\%) & 25 (11\%) & 24 (10\%) & 13 (5\%)  & 33 (14\%) & 24 (10\%) & 58 (25\%)\\
+Total             & 31 (13\%) & 25 (11\%) & 24 (10\%) & 13 (5\%)  & 33 (14\%) & 24 (10\%) & 61 (27\%)\\
 \hline 
 \end{tabular}%
 }
