--- a/results/2016-may/results.tex
+++ b/results/2016-may/results.tex
@@ -5,58 +5,54 @@
 \setlength\tabcolsep{0.3 ex}
 \begin{tabular}{|c|c|c|c|c|c|}
 \hline 
-Bug id            & NopolPC   & NopolC    & BrutpolPC & BrutpolC  & Genprog   & Kali      & Total \\
+Bug id            & DynaMoth  & jGenProg  & jKali     & Nopol     & Total \\
 \hline
-C5                & --        & Fixed     & --        & Fixed     &           &           &
-C6                & --        & --        & Fixed     & --        &           &           &
-C9                & Fixed     & Fixed     & --        & Fixed     &           &           &
-C13               & Fixed     & Fixed     & Fixed     & Fixed     &           &           &
-C17               & Fixed     & Fixed     & Fixed     & Fixed     &           &           &
-C21               & Fixed     & --        & Fixed     & --        &           &           &
-C25               & Fixed     & Fixed     & Fixed     & Fixed     &           &           &
+C5                & --        & Fixed     &Fixed   \\
+C6                & Fixed     & --        &Fixed   \\
+C9                & --        & Fixed     &Fixed   \\
+C13               & Fixed     & Fixed     &Fixed   \\
+C17               & Fixed     & Fixed     &Fixed   \\
+C21               & Fixed     & Fixed     &Fixed   \\
+C25               & Fixed     & Fixed     &Fixed   \\
 \hline
-L39               & Fixed     & --        & Fixed     & --        &           &           &
-L44               & Fixed     & Fixed     & --        & Fixed     &           &           &
-L46               & Fixed     & --        & Fixed     & --        &           &           &
-L51               & --        & Fixed     & --        & Fixed     &           &           &
-L53               & Fixed     & --        & Fixed     & --        &           &           &
-L55               & Fixed     & --        & Fixed     & --        &           &           &
-L58               & Fixed     & Fixed     & Fixed     & Fixed     &           &           &
-L63               & --        & --        & Fixed     & Fixed     &           &           &
+L39               & Fixed     & Fixed     &Fixed   \\
+L44               & --        & Fixed     &Fixed   \\
+L46               & Fixed     & Fixed     &Fixed   \\
+L51               & --        & Fixed     &Fixed   \\
+L53               & Fixed     & Fixed     &Fixed   \\
+L55               & Fixed     & Fixed     &Fixed   \\
+L58               & Fixed     & Fixed     &Fixed   \\
+L63               & Fixed     & --        &Fixed   \\
 \hline
-M32               & Fixed     & --        & --        & Fixed     &           &           &
-M33               & Fixed     & Fixed     & Fixed     & --        &           &           &
-M40               & --        & Fixed     & --        & --        &           &           &
-M41               & --        & --        & Fixed     & Fixed     &           &           &
-M42               & Fixed     & --        & Fixed     & --        &           &           &
-M46               & --        & --        & Fixed     & --        &           &           &
-M49               & Fixed     & Fixed     & Fixed     & Fixed     &           &           &
-M50               & Fixed     & Fixed     & Fixed     & Fixed     &           &           &
-M57               & Fixed     & Fixed     & Fixed     & --        &           &           &
-M58               & Fixed     & Fixed     & Fixed     & --        &           &           &
-M69               & Fixed     & --        & Fixed     & --        &           &           &
-M71               & --        & Fixed     & Fixed     & --        &           &           &
-M73               & --        & Fixed     & --        & --        &           &           &
-M78               & --        & --        & Fixed     & --        &           &           &
-M80               & Fixed     & --        & Fixed     & --        &           &           &
-M81               & Fixed     & Fixed     & --        & --        &           &           &
-M82               & Fixed     & --        & Fixed     & --        &           &           &
-M85               & Fixed     & Fixed     & --        & Fixed     &           &           &
-M87               & Fixed     & Fixed     & Fixed     & --        &           &           &
-M88               & Fixed     & --        & Fixed     & --        &           &           &
-M96               & --        & --        & --        & Fixed     &           &           &
-M97               & --        & --        & --        & Fixed     &           &           &
-M101              & --        & --        & --        & Fixed     &           &           &
-M104              & --        & Fixed     & --        & --        &           &           &
-M105              & Fixed     & --        & Fixed     & --        &           &           &
+M32               & --        & Fixed     &Fixed   \\
+M33               & Fixed     & Fixed     &Fixed   \\
+M40               & --        & Fixed     &Fixed   \\
+M41               & Fixed     & --        &Fixed   \\
+M42               & Fixed     & Fixed     &Fixed   \\
+M46               & Fixed     & --        &Fixed   \\
+M49               & Fixed     & Fixed     &Fixed   \\
+M50               & Fixed     & Fixed     &Fixed   \\
+M57               & Fixed     & Fixed     &Fixed   \\
+M58               & Fixed     & Fixed     &Fixed   \\
+M69               & Fixed     & Fixed     &Fixed   \\
+M71               & Fixed     & Fixed     &Fixed   \\
+M73               & --        & Fixed     &Fixed   \\
+M78               & Fixed     & --        &Fixed   \\
+M80               & Fixed     & Fixed     &Fixed   \\
+M81               & --        & Fixed     &Fixed   \\
+M82               & Fixed     & Fixed     &Fixed   \\
+M85               & --        & Fixed     &Fixed   \\
+M87               & Fixed     & Fixed     &Fixed   \\
+M88               & Fixed     & Fixed     &Fixed   \\
+M104              & --        & Fixed     &Fixed   \\
+M105              & Fixed     & Fixed     &Fixed   \\
 \hline
-T4                & Fixed     & Fixed     & Fixed     & --        &           &           &
-T7                & --        & --        & Fixed     & --        &           &           &
-T11               & Fixed     & Fixed     & Fixed     & --        &           &           &
-T14               & --        & --        & --        & Fixed     &           &           &
-T16               & Fixed     & --        & Fixed     & --        &           &           &
+T4                & Fixed     & Fixed     &Fixed   \\
+T7                & Fixed     & --        &Fixed   \\
+T11               & Fixed     & Fixed     &Fixed   \\
+T16               & Fixed     & Fixed     &Fixed   \\
 \hline
-Total             & 29 (37\%) & 22 (28\%) & 31 (39\%) & 18 (23\%) & 0 (0\%)   & 0 (0\%)   & 45 (57\%)\\
+Total             & 31 (40\%) & 0 (0\%)   & 0 (0\%)   & 35 (45\%) & 41 (53\%)\\
 \hline 
 \end{tabular}%
 }
