--- a/results/2016-may/results.tex
+++ b/results/2016-may/results.tex
@@ -7,24 +7,25 @@
 \hline 
 Bug id            & DynaMoth  & jGenProg  & jKali     & Nopol     & Total \\
 \hline
-C5                & --        & Fixed     &Fixed   \\
+C1                & Fixed     & --        &Fixed   \\
+C5                & Fixed     & Fixed     &Fixed   \\
 C6                & Fixed     & --        &Fixed   \\
-C9                & --        & Fixed     &Fixed   \\
+C9                & Fixed     & Fixed     &Fixed   \\
 C13               & Fixed     & Fixed     &Fixed   \\
 C17               & Fixed     & Fixed     &Fixed   \\
 C21               & Fixed     & Fixed     &Fixed   \\
 C25               & Fixed     & Fixed     &Fixed   \\
 \hline
 L39               & Fixed     & Fixed     &Fixed   \\
-L44               & --        & Fixed     &Fixed   \\
+L44               & Fixed     & Fixed     &Fixed   \\
 L46               & Fixed     & Fixed     &Fixed   \\
-L51               & --        & Fixed     &Fixed   \\
+L51               & Fixed     & Fixed     &Fixed   \\
 L53               & Fixed     & Fixed     &Fixed   \\
 L55               & Fixed     & Fixed     &Fixed   \\
 L58               & Fixed     & Fixed     &Fixed   \\
 L63               & Fixed     & --        &Fixed   \\
 \hline
-M32               & --        & Fixed     &Fixed   \\
+M32               & Fixed     & Fixed     &Fixed   \\
 M33               & Fixed     & Fixed     &Fixed   \\
 M40               & --        & Fixed     &Fixed   \\
 M41               & Fixed     & --        &Fixed   \\
@@ -41,18 +42,22 @@ M78               & Fixed     & --        &Fixed   \\
 M80               & Fixed     & Fixed     &Fixed   \\
 M81               & --        & Fixed     &Fixed   \\
 M82               & Fixed     & Fixed     &Fixed   \\
-M85               & --        & Fixed     &Fixed   \\
+M85               & Fixed     & Fixed     &Fixed   \\
 M87               & Fixed     & Fixed     &Fixed   \\
 M88               & Fixed     & Fixed     &Fixed   \\
+M96               & Fixed     & --        &Fixed   \\
+M97               & Fixed     & --        &Fixed   \\
+M101              & Fixed     & --        &Fixed   \\
 M104              & --        & Fixed     &Fixed   \\
 M105              & Fixed     & Fixed     &Fixed   \\
 \hline
 T4                & Fixed     & Fixed     &Fixed   \\
 T7                & Fixed     & --        &Fixed   \\
 T11               & Fixed     & Fixed     &Fixed   \\
+T14               & Fixed     & --        &Fixed   \\
 T16               & Fixed     & Fixed     &Fixed   \\
 \hline
-Total             & 31 (40\%) & 0 (0\%)   & 0 (0\%)   & 35 (45\%) & 41 (53\%)\\
+Total             & 42 (53\%) & 0 (0\%)   & 0 (0\%)   & 35 (44\%) & 46 (58\%)\\
 \hline 
 \end{tabular}%
 }
