--- a/results/2015-august/results.tex
+++ b/results/2015-august/results.tex
@@ -9,7 +9,7 @@ Bug id            & DynaMoth  & jGenProg  & jKali     & Nopol     & Total \\
 \hline
 C1                & --        & Fixed     & Fixed     & --        &Fixed   \\
 C3                & --        & Fixed     & --        & Fixed     &Fixed   \\
-C5                & --        & Fixed     & Fixed     & Fixed     &Fixed   \\
+C5                & Fixed     & Fixed     & Fixed     & Fixed     &Fixed   \\
 C6                & Fixed     & --        & --        & --        &Fixed   \\
 C7                & --        & Fixed     & --        & --        &Fixed   \\
 C9                & Fixed     & --        & --        & Fixed     &Fixed   \\
@@ -18,7 +18,7 @@ C15               & --        & Fixed     & Fixed     & --        &Fixed   \\
 C17               & Fixed     & --        & --        & Fixed     &Fixed   \\
 C21               & Fixed     & --        & --        & Fixed     &Fixed   \\
 C25               & Fixed     & Fixed     & Fixed     & Fixed     &Fixed   \\
-C26               & --        & --        & --        & Fixed     &Fixed   \\
+C26               & Fixed     & --        & --        & Fixed     &Fixed   \\
 \hline
 L39               & Fixed     & --        & --        & Fixed     &Fixed   \\
 L44               & --        & --        & --        & Fixed     &Fixed   \\
@@ -35,7 +35,7 @@ M8                & --        & Fixed     & Fixed     & --        &Fixed   \\
 M15               & --        & Fixed     & --        & --        &Fixed   \\
 M18               & --        & Fixed     & --        & --        &Fixed   \\
 M28               & --        & Fixed     & Fixed     & --        &Fixed   \\
-M32               & --        & --        & Fixed     & Fixed     &Fixed   \\
+M32               & Fixed     & --        & Fixed     & Fixed     &Fixed   \\
 M33               & Fixed     & --        & --        & Fixed     &Fixed   \\
 M40               & --        & Fixed     & Fixed     & Fixed     &Fixed   \\
 M41               & Fixed     & --        & --        & --        &Fixed   \\
@@ -59,6 +59,7 @@ M85               & Fixed     & Fixed     & Fixed     & Fixed     &Fixed   \\
 M87               & Fixed     & --        & --        & Fixed     &Fixed   \\
 M88               & Fixed     & --        & --        & Fixed     &Fixed   \\
 M95               & --        & Fixed     & Fixed     & --        &Fixed   \\
+M96               & Fixed     & --        & --        & --        &Fixed   \\
 M97               & Fixed     & --        & --        & Fixed     &Fixed   \\
 M104              & --        & --        & --        & Fixed     &Fixed   \\
 M105              & Fixed     & --        & --        & Fixed     &Fixed   \\
@@ -67,7 +68,7 @@ T4                & --        & Fixed     & Fixed     & --        &Fixed   \\
 T7                & Fixed     & --        & --        & --        &Fixed   \\
 T11               & Fixed     & Fixed     & Fixed     & Fixed     &Fixed   \\
 \hline
-Total             & 23 (10\%) & 30 (13\%) & 21 (9\%)  & 37 (16\%) & 56 (25\%)\\
+Total             & 27 (12\%) & 30 (13\%) & 21 (9\%)  & 37 (16\%) & 57 (25\%)\\
 \hline 
 \end{tabular}%
 }
