adds support Closure

--- a/docs/grid5000.md
+++ b/docs/grid5000.md
@@ -28,6 +28,11 @@ disco {site1} [{site2} {site3} ...]
 oardel id_job
 ```
 
+### Free all nodes
+```
+for i in $(oarstat -u | grep `whoami` | cut -f 1 -d ' '); do echo $i; oardel $i; done
+```
+
 ### List of reserved nodes
 
 ```
