--- a/results/2016-november/results.tex
+++ b/results/2016-november/results.tex
@@ -7,130 +7,116 @@
 \hline 
 Bug id            & DynaMoth  & jGenProg  & jKali     & Nopol     & Total \\
 \hline
-C1                & Fixed     & --        &Fixed   \\
 C3                & Fixed     &Fixed   \\
-C4                & Fixed     & Fixed     &Fixed   \\
-C5                & Fixed     & Fixed     &Fixed   \\
-C9                & Fixed     & Fixed     &Fixed   \\
-C13               & Fixed     & Fixed     &Fixed   \\
-C15               & Fixed     & --        &Fixed   \\
-C17               & Fixed     & Fixed     &Fixed   \\
+C4                & Fixed     &Fixed   \\
+C5                & Fixed     &Fixed   \\
+C9                & Fixed     &Fixed   \\
+C13               & Fixed     &Fixed   \\
+C17               & Fixed     &Fixed   \\
 C21               & Fixed     &Fixed   \\
-C25               & Fixed     & Fixed     &Fixed   \\
-C26               & Fixed     & Fixed     &Fixed   \\
+C25               & Fixed     &Fixed   \\
+C26               & Fixed     &Fixed   \\
 \hline
-C1                & Fixed     & Fixed     &Fixed   \\
-C2                & Fixed     & Fixed     &Fixed   \\
-C3                & Fixed     & Fixed     &Fixed   \\
-C5                & Fixed     & Fixed     &Fixed   \\
-C7                & --        & Fixed     &Fixed   \\
-C8                & Fixed     & Fixed     &Fixed   \\
-C10               & Fixed     & Fixed     &Fixed   \\
-C12               & --        & Fixed     &Fixed   \\
-C14               & --        & Fixed     &Fixed   \\
-C15               & --        & Fixed     &Fixed   \\
-C16               & Fixed     & Fixed     &Fixed   \\
-C17               & Fixed     & Fixed     &Fixed   \\
-C18               & Fixed     & Fixed     &Fixed   \\
-C19               & Fixed     & --        &Fixed   \\
-C20               & Fixed     & Fixed     &Fixed   \\
-C21               & Fixed     & Fixed     &Fixed   \\
-C22               & Fixed     & Fixed     &Fixed   \\
-C26               & Fixed     & Fixed     &Fixed   \\
-C28               & Fixed     & Fixed     &Fixed   \\
-C29               & Fixed     & Fixed     &Fixed   \\
-C30               & Fixed     & Fixed     &Fixed   \\
-C31               & Fixed     & Fixed     &Fixed   \\
-C33               & Fixed     & Fixed     &Fixed   \\
-C35               & --        & Fixed     &Fixed   \\
-C36               & Fixed     & Fixed     &Fixed   \\
-C38               & --        & Fixed     &Fixed   \\
-C40               & Fixed     & Fixed     &Fixed   \\
-C45               & Fixed     & Fixed     &Fixed   \\
-C48               & Fixed     & --        &Fixed   \\
-C49               & Fixed     & Fixed     &Fixed   \\
-C50               & Fixed     & Fixed     &Fixed   \\
-C55               & Fixed     & Fixed     &Fixed   \\
-C59               & Fixed     & --        &Fixed   \\
-C60               & Fixed     & Fixed     &Fixed   \\
-C61               & Fixed     & Fixed     &Fixed   \\
-C62               & Fixed     & Fixed     &Fixed   \\
-C63               & Fixed     & Fixed     &Fixed   \\
-C66               & Fixed     & Fixed     &Fixed   \\
-C67               & Fixed     & Fixed     &Fixed   \\
-C72               & Fixed     & Fixed     &Fixed   \\
-C75               & Fixed     & Fixed     &Fixed   \\
-C76               & Fixed     & Fixed     &Fixed   \\
-C78               & Fixed     & Fixed     &Fixed   \\
-C111              & --        & Fixed     &Fixed   \\
-C113              & Fixed     & Fixed     &Fixed   \\
-C114              & Fixed     & Fixed     &Fixed   \\
-C115              & Fixed     & Fixed     &Fixed   \\
-C116              & Fixed     & Fixed     &Fixed   \\
-C119              & --        & Fixed     &Fixed   \\
-C120              & Fixed     & Fixed     &Fixed   \\
-C121              & --        & Fixed     &Fixed   \\
-C124              & Fixed     & Fixed     &Fixed   \\
-C126              & Fixed     & Fixed     &Fixed   \\
-C127              & Fixed     & Fixed     &Fixed   \\
-C129              & Fixed     & Fixed     &Fixed   \\
-C130              & Fixed     & Fixed     &Fixed   \\
-C131              & Fixed     & Fixed     &Fixed   \\
-C132              & Fixed     & Fixed     &Fixed   \\
-C133              & Fixed     & Fixed     &Fixed   \\
+C1                & Fixed     &Fixed   \\
+C2                & Fixed     &Fixed   \\
+C3                & Fixed     &Fixed   \\
+C5                & Fixed     &Fixed   \\
+C7                & Fixed     &Fixed   \\
+C8                & Fixed     &Fixed   \\
+C10               & Fixed     &Fixed   \\
+C12               & Fixed     &Fixed   \\
+C14               & Fixed     &Fixed   \\
+C15               & Fixed     &Fixed   \\
+C16               & Fixed     &Fixed   \\
+C17               & Fixed     &Fixed   \\
+C18               & Fixed     &Fixed   \\
+C20               & Fixed     &Fixed   \\
+C21               & Fixed     &Fixed   \\
+C22               & Fixed     &Fixed   \\
+C26               & Fixed     &Fixed   \\
+C28               & Fixed     &Fixed   \\
+C29               & Fixed     &Fixed   \\
+C30               & Fixed     &Fixed   \\
+C31               & Fixed     &Fixed   \\
+C33               & Fixed     &Fixed   \\
+C35               & Fixed     &Fixed   \\
+C36               & Fixed     &Fixed   \\
+C38               & Fixed     &Fixed   \\
+C40               & Fixed     &Fixed   \\
+C45               & Fixed     &Fixed   \\
+C49               & Fixed     &Fixed   \\
+C50               & Fixed     &Fixed   \\
+C55               & Fixed     &Fixed   \\
+C60               & Fixed     &Fixed   \\
+C61               & Fixed     &Fixed   \\
+C62               & Fixed     &Fixed   \\
+C63               & Fixed     &Fixed   \\
+C66               & Fixed     &Fixed   \\
+C67               & Fixed     &Fixed   \\
+C72               & Fixed     &Fixed   \\
+C75               & Fixed     &Fixed   \\
+C76               & Fixed     &Fixed   \\
+C78               & Fixed     &Fixed   \\
+C111              & Fixed     &Fixed   \\
+C113              & Fixed     &Fixed   \\
+C114              & Fixed     &Fixed   \\
+C115              & Fixed     &Fixed   \\
+C116              & Fixed     &Fixed   \\
+C119              & Fixed     &Fixed   \\
+C120              & Fixed     &Fixed   \\
+C121              & Fixed     &Fixed   \\
+C124              & Fixed     &Fixed   \\
+C126              & Fixed     &Fixed   \\
+C127              & Fixed     &Fixed   \\
+C129              & Fixed     &Fixed   \\
+C130              & Fixed     &Fixed   \\
+C131              & Fixed     &Fixed   \\
+C132              & Fixed     &Fixed   \\
+C133              & Fixed     &Fixed   \\
 \hline
-L44               & Fixed     & Fixed     &Fixed   \\
-L51               & Fixed     & Fixed     &Fixed   \\
-L53               & Fixed     & Fixed     &Fixed   \\
-L55               & Fixed     & --        &Fixed   \\
-L58               & Fixed     & Fixed     &Fixed   \\
-L63               & Fixed     & --        &Fixed   \\
+L44               & Fixed     &Fixed   \\
+L51               & Fixed     &Fixed   \\
+L53               & Fixed     &Fixed   \\
+L58               & Fixed     &Fixed   \\
 \hline
-M2                & Fixed     & Fixed     &Fixed   \\
-M4                & --        & Fixed     &Fixed   \\
-M5                & Fixed     & --        &Fixed   \\
-M7                & --        & Fixed     &Fixed   \\
-M24               & Fixed     & Fixed     &Fixed   \\
-M28               & Fixed     & Fixed     &Fixed   \\
-M32               & Fixed     & --        &Fixed   \\
-M33               & Fixed     & Fixed     &Fixed   \\
-M39               & --        & Fixed     &Fixed   \\
-M40               & Fixed     & Fixed     &Fixed   \\
-M41               & Fixed     & Fixed     &Fixed   \\
-M42               & Fixed     & Fixed     &Fixed   \\
-M44               & Fixed     & Fixed     &Fixed   \\
-M46               & Fixed     & --        &Fixed   \\
-M49               & Fixed     & Fixed     &Fixed   \\
-M50               & Fixed     & Fixed     &Fixed   \\
-M57               & Fixed     & Fixed     &Fixed   \\
-M58               & Fixed     & Fixed     &Fixed   \\
-M69               & Fixed     & Fixed     &Fixed   \\
-M71               & Fixed     & --        &Fixed   \\
-M73               & --        & Fixed     &Fixed   \\
-M78               & Fixed     & Fixed     &Fixed   \\
-M80               & Fixed     & Fixed     &Fixed   \\
-M81               & --        & Fixed     &Fixed   \\
-M82               & Fixed     & --        &Fixed   \\
-M85               & Fixed     & Fixed     &Fixed   \\
-M87               & Fixed     & Fixed     &Fixed   \\
-M88               & Fixed     & Fixed     &Fixed   \\
-M97               & Fixed     & --        &Fixed   \\
-M101              & Fixed     & --        &Fixed   \\
-M105              & Fixed     & Fixed     &Fixed   \\
+M2                & Fixed     &Fixed   \\
+M4                & Fixed     &Fixed   \\
+M7                & Fixed     &Fixed   \\
+M24               & Fixed     &Fixed   \\
+M28               & Fixed     &Fixed   \\
+M33               & Fixed     &Fixed   \\
+M39               & Fixed     &Fixed   \\
+M40               & Fixed     &Fixed   \\
+M41               & Fixed     &Fixed   \\
+M42               & Fixed     &Fixed   \\
+M44               & Fixed     &Fixed   \\
+M49               & Fixed     &Fixed   \\
+M50               & Fixed     &Fixed   \\
+M57               & Fixed     &Fixed   \\
+M58               & Fixed     &Fixed   \\
+M69               & Fixed     &Fixed   \\
+M73               & Fixed     &Fixed   \\
+M78               & Fixed     &Fixed   \\
+M80               & Fixed     &Fixed   \\
+M81               & Fixed     &Fixed   \\
+M85               & Fixed     &Fixed   \\
+M87               & Fixed     &Fixed   \\
+M88               & Fixed     &Fixed   \\
+M105              & Fixed     &Fixed   \\
 \hline
-M29               & Fixed     & Fixed     &Fixed   \\
-M38               & Fixed     & Fixed     &Fixed   \\
+M29               & Fixed     &Fixed   \\
+M38               & Fixed     &Fixed   \\
 \hline
-T4                & Fixed     & Fixed     &Fixed   \\
-T7                & Fixed     & Fixed     &Fixed   \\
-T11               & Fixed     & Fixed     &Fixed   \\
-T12               & --        & Fixed     &Fixed   \\
-T14               & Fixed     & Fixed     &Fixed   \\
-T16               & Fixed     & Fixed     &Fixed   \\
-T18               & --        & Fixed     &Fixed   \\
-T19               & --        & Fixed     &Fixed   \\
+T4                & Fixed     &Fixed   \\
+T7                & Fixed     &Fixed   \\
+T11               & Fixed     &Fixed   \\
+T12               & Fixed     &Fixed   \\
+T14               & Fixed     &Fixed   \\
+T16               & Fixed     &Fixed   \\
+T18               & Fixed     &Fixed   \\
+T19               & Fixed     &Fixed   \\
 \hline
-Total             & 98 (24\%) & 0 (0\%)   & 0 (0\%)   & 103 (26\%) & 117 (29\%)\\
+Total             & 0 (0\%)   & 0 (0\%)   & 0 (0\%)   & 103 (26\%) & 103 (26\%)\\
 \hline 
 \end{tabular}%
 }
